--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 <body>
     <h1>This is a website.</h1>
     <div id="cool"></div>
+    <!-- <form action="">
+        <input type="text" name="name" id="name" placeholder="Enter your name"><br />
+        <input type="submit" value="Submit" onclick="submitTest()">
+    </form> -->
+    <form action="">
+        <input type="text" name="name" id="num1" placeholder="Number 1"><br />
+        <input type="text" name="name" id="num2" placeholder="Number 2"><br />
+        <input type="submit" value="+" onclick="addition()">
+        <input type="submit" value="-" onclick="subtraction()">
+        <input type="submit" value="*" onclick="multiplication()">
+        <input type="submit" value="/" onclick="division()">
+    </form>
 </body>
 <script src="script.js"></script>
 </html>
