--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
         <input type="text" name="name" id="name" placeholder="Enter your name"><br />
         <input type="submit" value="Submit" onclick="submitTest()">
     </form> -->
-    <form action="">
+    <form>
         <input type="text" name="name" id="num1" placeholder="Number 1"><br />
         <input type="text" name="name" id="num2" placeholder="Number 2"><br />
-        <input type="submit" value="+" onclick="addition()">
-        <input type="submit" value="-" onclick="subtraction()">
-        <input type="submit" value="*" onclick="multiplication()">
-        <input type="submit" value="/" onclick="division()">
+        <input value="+" onclick="addition()">
+        <input value="-" onclick="subtraction()">
+        <input value="*" onclick="multiplication()">
+        <input value="/" onclick="division()">
     </form>
+    <div id="ans">
+
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
