--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
     <h1>This is a website.</h1>
@@ -14,9 +15,9 @@
         <input type="submit" value="Submit" onclick="submitTest()">
     </form> -->
     <form>
-        <input type="text" name="name" id="num1" placeholder="Number 1"><br />
-        <input type="text" name="name" id="num2" placeholder="Number 2"><br />
-        <input value="+" onclick="addition()">
+        <input type="text" class="form-control" id="num1" placeholder="Number 1">
+        <input type="text" class="form-control" id="num2" placeholder="Number 1">
+        <input value="" onclick="addition()">
         <input value="-" onclick="subtraction()">
         <input value="*" onclick="multiplication()">
         <input value="/" onclick="division()">
@@ -24,6 +25,7 @@
     <div id="ans">
 
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 <script src="script.js"></script>
 </html>
