--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
     </form> -->
     <form>
         <input type="text" class="form-control" id="num1" placeholder="Number 1">
+        <div class="mt-3 mb-3">
+        <button class="btn btn-primary" onclick="addition()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+          </svg></button>
+        <button class="btn btn-primary" onclick="subtraction()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
+          </svg></button>
+        <button class="btn btn-primary" onclick="multiplication()">X</button>
+        <button class="btn btn-primary" onclick="division()">/</button>
+        </div>
         <input type="text" class="form-control" id="num2" placeholder="Number 1">
-        <input value="" onclick="addition()">
-        <input value="-" onclick="subtraction()">
-        <input value="*" onclick="multiplication()">
-        <input value="/" onclick="division()">
     </form>
     <div id="ans">
 
