--- a/todo.html
+++ b/todo.html
@@ -21,6 +21,7 @@
                     <input type="text" class="form-control" id="todoList1" aria-describedby="emailHelp"
                         placeholder="Enter Your TOdo item here">
                 </div>
+                <p class="mt-3 text-center" id="error"></p>
                 <div class="pt-3" style="display: flex; justify-content: center;">
                     <button class="btn btn-primary" onclick="addToList()">Add</button>
                 </div>
