--- a/todo.html
+++ b/todo.html
@@ -8,16 +8,21 @@
     <title>TOdo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <style>
+	body {
+	background: linear-gradient(to right, rgb(94, 147, 208), rgb(82, 194, 82));
+    }
+    </style>
 </head>
 
 <body>
-    <h1 class="text-center">TOdo Application</h1>
+    <h1 class="text-center" style="color: white;">TOdo Application</h1>
     <div class="container">
         <div class="row pt-3" style="display: flex; justify-content: center;">
             <div class="col-lg-7 col-md-7 col-sm-12">
 
                 <!-- <form> -->
-                    
+
                 <div>
                     <input type="text" class="form-control" id="todoList1" aria-describedby="emailHelp"
                         placeholder="Enter Your TOdo item here">
